--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -20,11 +20,41 @@
 .pointStyle {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   width: 280px;
   height: 70px;
   margin: 10px;
   background-color: silver;
   border: inset 5px;
+}
+
+.totalbombStyle {
+  display: flex;
+
+  /* float: right; */
+  width: 75px;
+  height: 50px;
+  margin-right: 30px;
+  background-color: black;
+}
+
+.faceStyle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  background-color: silver;
+  border: outset 5px;
+}
+
+.timeboardStyle {
+  display: flex;
+  width: 75px;
+  height: 50px;
+  margin-left: 30px;
+  background-color: black;
 }
 
 .gameboardStyle {
